--- a/views/student/pretest/2_Datatype_and_Variable-pretest.ejs
+++ b/views/student/pretest/2_Datatype_and_Variable-pretest.ejs
@@ -537,53 +537,53 @@
 
                 <!-- ข้อ 16 -->
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
-                    16.1 (Deployment)  ให้เขียนโปรแกรมแสดงค่าของข้อมูลดังนี้ (3 คะแนน)
+                    16.1 (Deployment)  ให้เขียนโปรแกรมแสดงค่าของข้อมูลดังนี้ (3 คะแนน) <br>
+                    (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                 </p>
                 <div  style="margin: 20px;">
                     <iframe src="https://drive.google.com/file/d/15JtyzFIcjkP-t5ioDrPaece38SmBv4No/preview" width="100%" height="600" allow="autoplay"></iframe>
-                <div class="form-group">
-                    <div class="group2">
-                        <h3>CODE</h3>
-                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                            ทดสอบโค้ด</button></h2> 
-                    </div>
-                    <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
-                    <textarea style="height: 400px;" class="form-control" id="code" name="code" rows="10" required></textarea>
-                </div></div>
+                </div>
+                    <div class="form-group">
+                    <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+                            ทดสอบโค้ด
+                    </button><br>
+                    <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="code" required></textarea>
 
+                </div>
+                
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
                     16.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 16.1 (1 คะแนน)</p>
                     <textarea class="form-control" style="height: 100px;" rows="4" cols="30" name="expResult16" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
                     16.3 (Improvement) ถ้าต้องการแสดงค่า f ให้เป็นทศนิยม 4 ตำแหน่ง ต้องแก้ไขอย่างไร (1 คะแนน) <br>
-                    (พร้อมเขียนอธิบายสิ่งที่แก้ไข)
+                    (พร้อมเขียนอธิบายสิ่งที่แก้ไข) <br>
+                    (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                     </p>
                     <div class="form-group">
-                        <div class="group2">
-                            <h3>CODE</h3>
-                            <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                                ทดสอบโค้ด</button></h2> 
-                        </div>
-                        <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
-                        <textarea style="height: 400px;" class="form-control" id="code" name="sendLink16" rows="10" required></textarea>
-                    </div>
+                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+                                ทดสอบโค้ด
+                        </button><br>  
+                        <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" name="sendLink16" type="text" rows="10" required></textarea>
+                            </div>
                 <br><br>
+
                 <!-- ข้อ 17 -->
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
-                    17.1 (Deployment) ให้เขียนโปรแกรมคำนวณหาพื้นที่สามเหลี่ยม <br>
-                    โดยกำหนดให้ Base  = 8.3 เมตร และ Height = 10.9 เมตร (3 คะแนน)
+                    17.1 (Deployment) ให้เขียนโปรแกรมคำนวณหาพื้นที่สามเหลี่ยม โดยกำหนดให้ Base  = 8.3 เมตร และ Height = 10.9 เมตร (3 คะแนน)<br>
+                    (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                 </p>
                 <div  style="margin: 20px;">
                     <iframe src="https://drive.google.com/file/d/1osQnRL5Jqkc4xR3FHW5vw17JXqgGcfAW/preview" width="100%" height="600" allow="autoplay"></iframe>                <div class="form-group">
-                    <div class="group2">
-                        <h3>CODE</h3>
-                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                            ทดสอบโค้ด</button></h2> 
+                </div>    
+                <div class="form-group">
+                    <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+                            ทดสอบโค้ด
+                    </button><br>
+                    <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink171" required></textarea>
+
                     </div>
-                    <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
-                    <textarea style="height: 400px;" class="form-control" id="code" name="sendLink171" rows="10" required></textarea>
-                </div></div>
+                
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
                     17.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 17.1 (1 คะแนน)</p>
@@ -591,33 +591,32 @@
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
                     17.3 (Improvement) ถ้าต้องการหาปริมาตรพีระมิด จะต้องเขียนโปรแกรมอย่างไร กำหนดให้ Base และ Height มีค่าเท่าเดิม (1 คะแนน) <br>
-                    (พร้อมเขียนอธิบายสิ่งที่แก้ไข)
+                    (พร้อมเขียนอธิบายสิ่งที่แก้ไข) <br>
+                    (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                     </p>
                     <div class="form-group">
-                        <div class="group2">
-                            <h3>CODE</h3>
-                            <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                                ทดสอบโค้ด</button></h2> 
-                        </div>
-                        <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
-                        <textarea style="height: 400px;" class="form-control" id="code" name="sendLink172" rows="10" required></textarea>
+                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+                            ทดสอบโค้ด
+                        </button>
+                        <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" name="sendLink172" type="text" rows="10" required></textarea>
                     </div>
                 <br><br>
 
                 <!-- ข้อ 18 -->
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
-                    18.1 (Deployment) ให้เขียนโปรแกรมแปลงอุณหภูมิ Celsius (C) เป็น Fahrenheit (F) <br>
-                    โดยกำหนดให้ C = 36 (3 คะแนน)
+                    18.1 (Deployment) ให้เขียนโปรแกรมแปลงอุณหภูมิ Celsius (C) เป็น Fahrenheit (F) โดยกำหนดให้ C = 36 (3 คะแนน)<br>
+                    (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                 </p>
                 <div  style="margin: 20px;">
                     <iframe src="https://drive.google.com/file/d/1KUivgO6uXy1YT9iw0aNTGeDNyEiz_CPT/preview" width="100%" height="600" allow="autoplay"></iframe>                    <div class="group2">
-                        <h3>CODE</h3>
-                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                            ทดสอบโค้ด</button></h2> 
+                </div>
+                <div class="form-group">
+                    <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+                            ทดสอบโค้ด
+                    </button><br>
+                    <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink181" required></textarea>
+
                     </div>
-                    <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
-                    <textarea style="height: 400px;" class="form-control" id="code" name="sendLink181" rows="10" required></textarea>
-                </div></div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
                     18.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 18.1 (1 คะแนน)</p>
@@ -625,33 +624,33 @@
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
                     18.3 (Improvement) ถ้าต้องการให้แปลงอุณหภูมิ Fahrenheit (F) เป็น Celsius (C) จะต้องเขียนโปรแกรมอย่างไร กำหนดให้ F = 93 (1 คะแนน) <br>
-                    (พร้อมเขียนอธิบายสิ่งที่แก้ไข)
+                    (พร้อมเขียนอธิบายสิ่งที่แก้ไข) <br>
+                    (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                     </p>
                     <div class="form-group">
-                        <div class="group2">
-                            <h3>CODE</h3>
-                            <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                                ทดสอบโค้ด</button></h2> 
+                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+                                ทดสอบโค้ด
+                        </button><br>
+                        <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink182" required></textarea>
+    
                         </div>
-                        <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
-                        <textarea style="height: 400px;" class="form-control" id="code" name="sendLink182" rows="10" required></textarea>
-                    </div>
                 <br><br>
 
                 <!-- ข้อ 19 -->
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
-                    19.1 (Deployment) ให้เขียนโปรแกรมคำนวณยอดขายสินค้ารวมภาษี <br>
-                    โดยกำหนดให้ภาษี VAT = 7% ราคาสินค้า A = 400, B = 600, C = 800 (3 คะแนน)
+                    19.1 (Deployment) ให้เขียนโปรแกรมคำนวณยอดขายสินค้ารวมภาษี โดยกำหนดให้ภาษี VAT = 7% ราคาสินค้า A = 400, B = 600, C = 800 (3 คะแนน)<br>
+                    (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                 </p>
                 <div  style="margin: 20px;">
                     <iframe src="https://drive.google.com/file/d/1A4vDFT5BVSgZhqcdNHrdJXWvsFdA7fau/preview" width="100%" height="600" allow="autoplay"></iframe>                    <div class="group2">
-                        <h3>CODE</h3>
-                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                            ทดสอบโค้ด</button></h2> 
+                </div>
+                <div class="form-group">
+                    <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+                            ทดสอบโค้ด
+                    </button><br>
+                    <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink191" required></textarea>
+
                     </div>
-                    <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
-                    <textarea style="height: 400px;" class="form-control" id="code" name="sendLink191" rows="10" required></textarea>
-                </div></div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
                     19.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 19.1 (1 คะแนน)</p>
@@ -659,34 +658,32 @@
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
                     19.3 (Improvement) ถ้าต้องการเพิ่มสินค้า D = 1000 และ E = 2000 จะต้องแก้ไขส่วนใดบ้าง และได้ผลลัพธ์เท่าไร (1 คะแนน) <br>
-                    (พร้อมเขียนอธิบายสิ่งที่แก้ไข)
+                    (พร้อมเขียนอธิบายสิ่งที่แก้ไข) <br>(ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                     </p>
                     <div class="form-group">
-                        <div class="group2">
-                            <h3>CODE</h3>
-                            <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                                ทดสอบโค้ด</button></h2> 
+                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+                                ทดสอบโค้ด
+                        </button><br>
+                        <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink192" required></textarea>
+    
                         </div>
-                        <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
-                        <textarea style="height: 400px;" class="form-control" id="code" name="sendLink192" rows="10" required></textarea>
-                    </div>
                 <br><br>
 
                 <!-- ข้อ 20 -->
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
-                    20.1 (Deployment) ให้เขียนโปรแกรมคำนวณหาพื้นที่วงกลม <br>
-                    โดยกำหนดให้ PI = 3.1416 เป็นค่าคงที่ และค่ารัศมี radius = 6 (3 คะแนน)
+                    20.1 (Deployment) ให้เขียนโปรแกรมคำนวณหาพื้นที่วงกลม โดยกำหนดให้ PI = 3.1416 เป็นค่าคงที่ และค่ารัศมี radius = 6 (3 คะแนน)<br>
+                    (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                 </p>
                 <div  style="margin: 20px;">
                     <iframe src="https://drive.google.com/file/d/1CnAqlO3WcbvGuckORcpOyhaWT_vQdgR9/preview" width="100%" height="600" allow="autoplay"></iframe>                <div class="form-group">
-                    <div class="group2">
-                        <h3>CODE</h3>
-                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                            ทดสอบโค้ด</button></h2> 
                     </div>
-                    <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
-                    <textarea style="height: 400px;" class="form-control" id="code" name="sendLink201" rows="10" required></textarea>
-                </div></div>
+                    <div class="form-group">
+                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+                                ทดสอบโค้ด
+                        </button><br>
+                        <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink201" required></textarea>
+    
+                        </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
                     20.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 20.1 (1 คะแนน)</p>
@@ -694,17 +691,16 @@
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
                     20.3 (Improvement) ถ้าต้องการหาพื้นที่ผิวทรงกลม สูตร 4*PI*(radius*radius) จะต้องแก้ไขส่วนใดบ้าง และได้ผลลัพธ์เท่าไร (1 คะแนน) <br>
-                    (พร้อมเขียนอธิบายสิ่งที่แก้ไขและผลลัพธ์)
+                    (พร้อมเขียนอธิบายสิ่งที่แก้ไขและผลลัพธ์) <br>
+                    (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                     </p>
                     <div class="form-group">
-                        <div class="group2">
-                            <h3>CODE</h3>
-                            <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                                ทดสอบโค้ด</button></h2> 
+                        <button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+                                ทดสอบโค้ด
+                        </button><br>
+                        <textarea class="form-control" style="height: 100px;" placeholder="วางลิงก์ที่นี่" rows="4" cols="30" name="sendLink202" required></textarea>
+    
                         </div>
-                        <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
-                        <textarea style="height: 400px;" class="form-control" id="code" name="sendLink202" rows="10" required></textarea>
-                    </div>
                 <br><br>
 
                 Language : <select name="lang"><option value="C">C</option></select>
